--- a/index.html
+++ b/index.html
@@ -46,5 +46,6 @@
 		<script src="scripts/jquery.js"></script>
 		<script src="scripts/jquery.validate.js"></script>
 		<script src="scripts/script.js"></script>
+		<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQRrzrtmsg3bMwwUI7XnVbvu6ZTofUkFE&callback=initMap"></script>
 	</body>
 </html>
