Build addmarker function

--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
 						<legend>Set a marker</legend>
 						<p>
 							<label><span>Latitude:</span>
-								<input type="text" name="latitude" placeholder="e.g: latitude" required>
+								<input class="latitude" type="text" name="latitude" placeholder="e.g: 30.2741" required>
 							</label>
 						</p>
 						<p>
 							<label><span>Longitude:</span>
-								<input type="text" name="longitude" placeholder="e.g: longitude" required>
+								<input class="longitude" type="text" name="longitude" placeholder="e.g: 120.1551" required>
 							</label>
 						</p>
 						<p>
 							<label><span>Message:</span>
-								<input type="text" name="messages" placeholder="e.g: some messages" required>
+								<input class="messages" type="text" name="messages" placeholder="e.g: It's a good place" required>
 							</label>
 						</p>
 						<p>
