Improve location input

--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
 					<fieldset>
 						<legend>Set a marker</legend>
 						<p>
-							<label><span>Latitude:</span>
-								<input class="latitude" type="text" name="latitude" placeholder="e.g: 30.2741" required>
+							<label><span>Latitude(-90~90):</span>
+								<input class="latitude" type="number" step="any" name="latitude" placeholder="e.g: 30.2741" required>
 							</label>
 						</p>
 						<p>
-							<label><span>Longitude:</span>
-								<input class="longitude" type="text" name="longitude" placeholder="e.g: 120.1551" required>
+							<label><span>Longitude(-180~180):</span>
+								<input class="longitude" type="number" step="any" name="longitude" placeholder="e.g: 120.1551" required>
 							</label>
 						</p>
 						<p>
 							<label><span>Message:</span>
-								<input class="messages" type="text" name="messages" placeholder="e.g: It's a good place" required>
+								<input class="messages" type="text" name="messages" placeholder="e.g: It's a good place">
 							</label>
 						</p>
 						<p>
